[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/ship_broke_right.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ship_broke_left.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Broken_Ship.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 39 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.3333, 130 )

[node name="BrokenShip" type="Node2D"]
z_index = -1
z_as_relative = false
script = ExtResource( 3 )

[node name="LeftHalfBody" type="RigidBody2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="LeftHalf" type="Sprite" parent="LeftHalfBody"]
position = Vector2( 19, 39 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="LeftHalfBody"]
position = Vector2( 17.5, 39 )
shape = SubResource( 1 )

[node name="RightHalfBody" type="RigidBody2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="RightHalf" type="Sprite" parent="RightHalfBody"]
position = Vector2( 54.5, 39 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="RightHalfBody"]
position = Vector2( 49, 39 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 2 )

[node name="StaticCollisionTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="StaticCollisionTimer" to="." method="_on_StaticCollisionTimer_timeout"]
